--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/2/17"
+    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/5/19"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "from spacepy import pycdf\n",
     "\n",
     "import os\n",
-    "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_0-dist/lib\"\n",
+    "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_1-dist/lib\"\n",
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
@@ -127,6 +127,14 @@
     "# 202402 -- ASW3\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/IRFU/cdf/'        # 202312_FS test folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240201.cdf']\n",
+    "\n",
+    "# 202405 -- dryrun check\n",
+    "# LGA\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/2_LGA-dryrun/'   \n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20000108T053322-20000108T054141_V01___TMIDX_00000.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-01a-1_2024_05_15_15_30_16/TM00\n",
+    "                  'JUICE_L1a_RPWI-HF-SID20_20000108T054142-20000108T054318_V01___TMIDX_00001.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-01a-1_2024_05_15_15_30_16/TM01\n",
+    "                  'JUICE_L1a_RPWI-HF-SID20_20000108T061058-20000108T061531_V01___TMIDX_00000.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-01a-2_2024_05_15_16_07_58\n",
+    "                 ]\n",
     "\"\"\"\n",
     "\"\"\""
    ]
@@ -140,11 +148,11 @@
    "source": [
     "# *** Flight data: Ver.2 ***\n",
     "# 20240126\n",
+    "\"\"\"\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240126T113714_V01.cdf',\n",
     "                  'JUICE_L1a_RPWI-HF-SID20_20240126T114800_V01.cdf',\n",
     "                  ]\n",
-    "\"\"\"\n",
     "\"\"\""
    ]
   },
