--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/3/30"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/5/19"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "from spacepy import pycdf\n",
     "\n",
     "import os\n",
-    "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_0-dist/lib\"\n",
+    "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_1-dist/lib\"\n",
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
@@ -92,8 +92,8 @@
     "# clean_mode = 0                        # 0: normal  1: cleaning in time   2: cleaning in time & frequency\n",
     "\n",
     "# *** Frenquency range set ***\n",
-    "f_mode_min = 3000\n",
-    "f_mode_max = 10000\n",
+    "f_mode_min = 5000\n",
+    "f_mode_max = 15000\n",
     "\n",
     "# *** Filter make ***\n",
     "# filter_mode = 0                         # 0: read     1: make\n",
@@ -152,7 +152,12 @@
     "                  #'JUICE_L1a_RPWI-HF-SID2_FSW1_1F_21_no_jump.bin.cdf',\n",
     "                  'JUICE_L1a_RPWI-HF-SID2_high.cdf',\n",
     "                 ]\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "# 202405 -- dryrun check\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/1_first_parts/'   # 202312_FS test folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20000108T044504-20000108T044719_V01___TMIDX_00000.bin.cdf',   # pc2_rpwi_hf_fft_sid2_2024_05_15_14_41_35\n",
+    "                 ]\n"
    ]
   },
   {
@@ -163,12 +168,12 @@
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
+    "\"\"\"\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/25/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',      # 128\n",
     "                  #'JUICE_L1a_RPWI-HF-SID2_20240125T152238_V01.cdf',      # 512\n",
     "                 ]\n",
-    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -496,7 +501,7 @@
     "mask_list = np.zeros(n_mask * 3)\n",
     "mask_list = mask_list.reshape(n_mask, 3)\n",
     "mask_dir = './lib/'\n",
-    "mask_name = 'hf_mask_natural.csv'\n",
+    "mask_name = 'hf_sid3_mask.csv'\n",
     "mask_file = mask_dir + mask_name\n",
     "\n",
     "# mask_natural read\n",
@@ -1813,8 +1818,8 @@
     "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "#   f_min = 4900;        f_max = 6100;        print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "# Z-range\n",
-    "p_min  = p_min0+1.5;     p_max  = p_max0-2\n",
-    "p_min2 = p_min0+1.5;     p_max2 = p_max0-2\n",
+    "p_min  = p_min0+1;     p_max  = p_max0-2\n",
+    "p_min2 = p_min0+1;     p_max2 = p_max0-2\n",
     "\n",
     "fig2d = plt.figure(figsize=[12,16])\n",
     "ax1 = fig2d.add_subplot(5, 1, 1);  ax2 = fig2d.add_subplot(5, 1, 2); ax3 = fig2d.add_subplot(5, 1, 3); ax4 = fig2d.add_subplot(5, 1, 4)\n",
@@ -1886,7 +1891,7 @@
     "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "#   f_min = 4900;        f_max = 6100;        print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "# Z-range\n",
-    "p_min  = p_min0+1.5;     p_max  = p_max0-2\n",
+    "p_min  = p_min0+1;     p_max  = p_max0-2\n",
     "\n",
     "fig2d = plt.figure(figsize=[12,16])\n",
     "ax1 = fig2d.add_subplot(5, 1, 1);  ax2 = fig2d.add_subplot(5, 1, 2); ax3 = fig2d.add_subplot(5, 1, 3); ax4 = fig2d.add_subplot(5, 1, 4)\n",
