--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/2/7"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/5/19"
    ]
   },
   {
@@ -48,7 +48,7 @@
     "from spacepy import pycdf\n",
     "\n",
     "import os\n",
-    "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_0-dist/lib\"\n",
+    "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_1-dist/lib\"\n",
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
@@ -74,7 +74,7 @@
     "# *** Mode set ***\n",
     "band_mode = 0                           # 0: sum    1: /Hz\n",
     "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
+    "f_mode = 1                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "#\n",
     "time_mode = 1                           # 0: Epoch    1: data number\n",
@@ -83,6 +83,10 @@
     "cal = 0                                 # 0: background     1: CAL\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
+    "\n",
+    "# *** Frenquency range set ***\n",
+    "f_mode_min = 5000                       # 80\n",
+    "f_mode_max = 15000                      # 2068 : as same as SID-4/20\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
     "cf, p_max0, p_min0 = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
@@ -134,10 +138,61 @@
     "                 ]\n",
     "\n",
     "# 202401 -- ErrorCheck\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202401_FS/cdf/'    # 202312_FS test folder\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202401_FS/cdf/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_comp2.cdf',\n",
     "                 ]\n",
+    "\n",
+    "# 202405 -- dryrun check\n",
+    "# TEST\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/1_first_parts/'\n",
+    "# COMP1->2, 2->1\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T040602-20000108T041954_V01___TMIDX_00000.bin.cdf',  # pc2_rpwi_hf_SID3_without_masking_2024_05_15_14_02_53\n",
+    "                 ]\n",
     "\"\"\"\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T042923-20000108T044315_V01___TMIDX_00000.bin.cdf',  # pc2_rpwi_hf_SID3_with_masking_2024_05_15_14_26_24\n",
+    "                 ]\n",
+    "# COMP2\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T050103-20000108T051303_V01___TMIDX_00000.bin.cdf',  # pc2_SC_roll_RPW-SEQ-12i-1-Stack_RPWI_2_2024_05_15_14_57_41/TM00\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T051318-20000108T051533_V01___TMIDX_00001.bin.cdf',  # pc2_SC_roll_RPW-SEQ-12i-1-Stack_RPWI_2_2024_05_15_14_57_41/TM01\n",
+    "                 ]\n",
+    "# COMP\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T051649-20000108T052219_V01___TMIDX_00000.bin.cdf',  # pc2_RPWI_combined-Stack_RPWI_3_2024_05_15_15_13_36\n",
+    "                 ]\n",
+    "#\n",
+    "# LGA: COMP-1\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/2_LGA-dryrun/'   \n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T052829-20000108T053159_V01___TMIDX_00000.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-13a-1_2024_05_15_15_25_20\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T054433-20000108T055503_V01___TMIDX_00000.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-13a-2_2024_05_15_15_41_26/TM00\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T055533-20000108T060533_V01___TMIDX_00001.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-13a-2_2024_05_15_15_41_26/TM01\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T060603-20000108T060703_V01___TMIDX_00002.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-13a-2_2024_05_15_15_41_26/TM02\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T064409-20000108T064839_V01___TMIDX_00000.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-13b_2024_05_15_16_40_53\n",
+    "                 ]\n",
+    "# EGA: COMP-1 & -2\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/3_EGA-dryrun/'   \n",
+    "# COMP-2\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T065600-20000108T065800_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-04a_2024_05_15_16_52_23\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T065858-20000108T070058_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-04b-1_2024_05_15_16_55_43\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T070151-20000108T070351_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-04c_2024_05_15_16_58_39\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T070445-20000108T070645_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-04b-2_2024_05_15_17_01_40\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T070750-20000108T070950_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-04d_2024_05_15_17_04_35\n",
+    "                 ]\n",
+    "# COMP-1\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T071058-20000108T071258_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12a-1_2024_05_15_17_07_46\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T071707-20000108T071907_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12b_2024_05_15_17_13_55\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T071951-20000108T072151_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12a-2_2024_05_15_17_16_42\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T072241-20000108T072441_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12c_2024_05_15_17_19_28\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T072530-20000108T072730_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12d_2024_05_15_17_22_18\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T073057-20000108T073257_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12e_2024_05_15_17_27_45\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T073349-20000108T073549_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12f_2024_05_15_17_30_37\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T073635-20000108T073835_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12g_2024_05_15_17_33_23\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20000108T073920-20000108T074120_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12h_2024_05_15_17_36_08\n",
+    "                 ]\n",
+    "# COMP-2\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T074210-20000108T074410_V01___TMIDX_00000.bin.cdf',  # pc2_SC_roll_RPW-SEQ-12i-2_2024_05_15_17_38_55\n",
+    "                 ]\n",
+    "# COMP-1\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T074511-20000108T074711_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12j_2024_05_15_17_41_59\n",
+    "                 ]\n",
     "\"\"\""
    ]
   },
@@ -150,10 +205,10 @@
    "source": [
     "# *** Flight data: Ver.2 ***\n",
     "# 20240126\n",
+    "\"\"\"\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240126T083835_V01.cdf',\n",
     "                 ]\n",
-    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -396,7 +451,7 @@
     "    N_component = 21\n",
     "print(\"Ch:\", N_ch, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
     "print(\"BG_downlink:\", data.BG_downlink[0])\n",
-    "\n",
+    "print(\"RFI_rejection:\", data.RFI_rejection[0])\n",
     "N_frequency = data.frequency.shape[1]\n",
     "print(\"==> Component\", N_component, \"   Num-frequency\", N_frequency, \"  Num-sweep:\", n_time0)"
    ]
@@ -484,11 +539,13 @@
     "ax1.set_yscale('log')\n",
     "ax7.plot(np.ravel(data.frequency),     '-r', linewidth=0.6, label='frequency')\n",
     "ax7.plot(np.ravel(data.freq_step*100),  '-g', linewidth=0.8, label='step*100')\n",
-    "ax7.plot(np.ravel(data.freq_width*100), ':b', linewidth=1.0, label='width*100')\n",
+    "ax7.plot(np.ravel(data.freq_width*100), '-b', linewidth=1.0, label='width*100')\n",
     "ax8.plot(np.ravel(data.T_HF_FPGA),  ':r', label='T (HK-FPGA)')\n",
     "ax8.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
     "ax8.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
     "ax8.plot(np.ravel(data.cal_signal*10), '-k', label='CAL')\n",
+    "ax8.plot(np.ravel(data.RFI_rejection*10+2), '_b', label='RFI')\n",
+    "ax8.plot(np.ravel(data.complex*10+4), '_r', label='comp')\n",
     "ax9.plot(np.ravel(data.epoch), '.')\n",
     "#\n",
     "if data.complex[0] > 0:    # Matrix\n",
@@ -620,7 +677,7 @@
     "# X-range\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
-    "    f_min = f_min0;  f_max = 2068   # as same as SID-4/20\n",
+    "    f_min = f_mode_min;  f_max = f_mode_max\n",
     "\n",
     "if data.complex[0] == 0:    # power\n",
     "    fig = plt.figure(figsize=(12, 4))\n",
@@ -770,9 +827,9 @@
     "# Y-range\n",
     "f_min = f_min0;      f_max = f_max0\n",
     "if f_mode == 0:\n",
-    "    f_min = f_min0;  f_max = 5000\n",
+    "    f_min = f_mode_min;  f_max = f_mode_max\n",
     "# Z-range\n",
-    "p_min = p_min0-1;      p_max = p_max0\n",
+    "p_min = p_min0+2.5;    p_max = p_max0-3\n",
     "\n",
     "# Epoch_1d\n",
     "num_1d = np.arange(n_time0)\n",
@@ -848,7 +905,7 @@
     "    # Y-range\n",
     "    f_min0 = f_min;      f_max0 = f_max\n",
     "    if f_mode == 0:\n",
-    "        f_min0 = f_min;  f_max0 = 5000\n",
+    "        f_min = f_mode_min;  f_max = f_mode_max\n",
     "    # Z-range\n",
     "    p_min = p_min0;      p_max = p_max0\n",
     "\n",
@@ -981,7 +1038,7 @@
     "# X-range\n",
     "f_min0 = f_min;  f_max0 = f_max\n",
     "if f_mode == 0:\n",
-    "    f_min0 = f_min;  f_max0 = 5000\n",
+    "    f_min = f_mode_min;  f_max = f_mode_max\n",
     "# Y-range\n",
     "p_min0 = p_min;  p_max0 = p_max\n",
     "\n",
@@ -1053,9 +1110,9 @@
     "# Y-range\n",
     "f_min0 = f_min;      f_max0 = f_max\n",
     "if f_mode == 0:\n",
-    "    f_min0 = f_min;  f_max0 = 5000\n",
+    "    f_min = f_mode_min;  f_max = f_mode_max\n",
     "# Z-range\n",
-    "p_min0 = p_min;      p_max0 = p_max\n",
+    "p_min = p_min0+2.5;  p_max = p_max0-3\n",
     "\n",
     "fig2d = plt.figure(figsize=[12,14])\n",
     "ax1 = fig2d.add_subplot(4, 1, 1);  ax2 = fig2d.add_subplot(4, 1, 2);  ax3 = fig2d.add_subplot(4, 1, 3)\n",
