--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2024/2/7"
+    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2024/5/19"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "from spacepy import pycdf\n",
     "\n",
     "import os\n",
-    "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_0-dist/lib\"\n",
+    "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_1-dist/lib\"\n",
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
@@ -127,7 +127,15 @@
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202312_C/cdf/'    # 202312_FS test folder\n",
     "data_name_list = ['SID4_RPWI_NEWv2_SCI.cdf',\n",
     "                 ]\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "# 202405 -- dryrun check\n",
+    "# LGA\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/2_LGA-dryrun/'   \n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID4_20000108T053334-20000108T054137_V01___TMIDX_00000.bin.cdf',   # pc2_LGA-dryrun_RPW-SEQ-01a-1_2024_05_15_15_30_16/TM00\n",
+    "                  'JUICE_L1a_RPWI-HF-SID4_20000108T054148-20000108T054316_V01___TMIDX_00001.bin.cdf',   # pc2_LGA-dryrun_RPW-SEQ-01a-1_2024_05_15_15_30_16/TM01\n",
+    "                  'JUICE_L1a_RPWI-HF-SID4_20000108T061111-20000108T061524_V01___TMIDX_00000.bin.cdf',   # pc2_LGA-dryrun_RPW-SEQ-01a-2_2024_05_15_16_07_58\n",
+    "                 ]"
    ]
   },
   {
@@ -137,12 +145,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "# *** Flight data: Ver.2 ***\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID4_20240126T113727_V01.cdf',\n",
     "                 ]\n",
-    "\"\"\"\n",
     "\"\"\""
    ]
   },
