--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/2/7"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/5/19"
    ]
   },
   {
@@ -49,7 +49,7 @@
     "from spacepy import pycdf\n",
     "\n",
     "import os\n",
-    "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_0-dist/lib\"\n",
+    "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_1-dist/lib\"\n",
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
@@ -109,8 +109,40 @@
     "# 202311 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name = 'SID23_Seq07.cdf'\n",
-    "#data_name = 'SID23_Seq08.cdf'\n",
-    "#data_name = 'SID23_Seq09.cdf'"
+    "data_name = 'SID23_Seq08.cdf'\n",
+    "data_name = 'SID23_Seq09.cdf'\n",
+    "\n",
+    "# 202405 -- dryrun check\n",
+    "# TEST\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/1_first_parts/'\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T045452-20000108T045711_V01___TMIDX_00000.bin.cdf'    # 400kHz  pc2_rpwi_pssr3_test_2024_05_15_14_51_46\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T045849-20000108T045916_V01___TMIDX_00000.bin.cdf'    # 9MHz    pc2_rpwi_pssr3_9MHz_2024_05_15_14_55_51\n",
+    "#data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20000108T045452-20000108T045711_V01___TMIDX_00000.bin.cdf',    # 400kHz  pc2_rpwi_pssr3_test_2024_05_15_14_51_46\n",
+    "#                 ]\n",
+    "#data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20000108T045849-20000108T045916_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_rpwi_pssr3_9MHz_2024_05_15_14_55_51\n",
+    "#                 ]\n",
+    "\n",
+    "# LGA\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/2_LGA-dryrun/'   \n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T060822-20000108T061002_V01___TMIDX_00000.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-1_2024_05_15_16_05_11\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T061805-20000108T062005_V01___TMIDX_00000.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM00\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T062045-20000108T062245_V01___TMIDX_00001.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM01\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T062325-20000108T062525_V01___TMIDX_00002.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM02\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T062605-20000108T062725_V01___TMIDX_00003.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM03\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T063854-20000108T064114_V01___TMIDX_00000.bin.cdf'    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM00\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T064154-20000108T064314_V01___TMIDX_00001.bin.cdf'    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM01\n",
+    "#data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20000108T060822-20000108T061002_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-1_2024_05_15_16_05_11\n",
+    "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T061805-20000108T062005_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM00\n",
+    "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T062025-20000108T062245_V01___TMIDX_00001.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM01\n",
+    "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T062305-20000108T062525_V01___TMIDX_00002.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM02\n",
+    "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T062605-20000108T062725_V01___TMIDX_00003.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM03\n",
+    "#                 ]\n",
+    "#data_name_list = [\n",
+    "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T063854-20000108T064114_V01___TMIDX_00000.bin.cdf',    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM00\n",
+    "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T064154-20000108T064314_V01___TMIDX_00001.bin.cdf',    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM01\n",
+    "#                 ]\n",
+    "\"\"\"\n",
+    "\"\"\""
    ]
   },
   {
@@ -121,11 +153,11 @@
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
+    "\"\"\"\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
     "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240126T092930_V01.cdf'\n",
     "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240126T094802_V01.cdf'\n",
-    "\"\"\"\n",
     "\"\"\""
    ]
   },
