--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF HK: QL -- 2024/2/７"
+    "# JUICE RPWI HF HK: QL -- 2024/6/26"
    ]
   },
   {
@@ -16,7 +16,10 @@
    "source": [
     "import sys\n",
     "import numpy as np\n",
-    "import datetime"
+    "import matplotlib.pyplot as plt\n",
+    "import datetime\n",
+    "\n",
+    "print(np.__version__)"
    ]
   },
   {
@@ -42,8 +45,8 @@
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
     "import juice_cdf_lib as juice_cdf\n",
-    "import juice_hk_lib as juice_hk\n",
-    "# import juice_math_lib as juice_math"
+    "# import juice_math_lib as juice_math\n",
+    "import juice_hk_lib as juice_hk"
    ]
   },
   {
@@ -59,16 +62,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# V1-software\n",
+    "date='20230526'\n",
+    "date='20230601'\n",
+    "date='20230712'\n",
+    "\n",
+    "# Ground\n",
+    "#date='all'\n",
+    "#date='RPWI_S7_P1'\n",
+    "#date='RPWI_S7_P1_switch'\n",
+    "#date='RPWI_S8_P1'\n",
+    "#date='RPWI_S8_P2_switch'\n",
+    "#date='RPWI_S9_P2'\n",
+    "#date='RPWI_S9_P2_delta'\n",
+    "#date='RPWI_S11_P2'\n",
+    "#date='RPWI_S11_P2_delta'\n",
+    "#date='RPWI_S12_P2'\n",
+    "#date='RPWI_S12_P2_switch'\n",
+    "#date='RPWI_S13_P2'\n",
+    "#date='RPWI_S14_P2'\n",
+    "#date='RPWI_S15_P2'\n",
+    "#date='RPWI_S17_P3_P4'\n",
+    "#date='RPWI_S17_P4_switch'\n",
+    "#date='RPWI_S18_P4_switch'\n",
+    "#date='RPWI_S19_P4'\n",
+    "#date='RPWI_S20_P4'\n",
+    "#date='RPWI_S21_P4'\n",
+    "#date='RPWI_S21_P4_SWITCH'\n",
+    "#date='RPWI_S22_P4_P5'\n",
+    "#date='RPWI_S23_P5'\n",
+    "#date='RPWI_S24_P5'\n",
+    "#date='RPWI_S24_P5_SWITCH'\n",
+    "#date='RPWI_S25_P4_SWITCH'\n",
+    "#date='RPWI_S25_P5'\n",
+    "#date='RPWI_S40_P10'\n",
+    "#date='RPWI_S64_S12_SWITCH'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# V2-software\n",
+    "date='20240125'\n",
+    "#date='20240126'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'                      # Plot dump folder\n",
-    "base_dir = '/Users/user/OneDrive-Univ/data/data-JUICE/datasets/'\n",
     "\n",
-    "date='20230526'\n",
-    "#date='20230530'\n",
-    "#date='20230601'\n",
-    "#date='20230712'\n",
-    "#date='20240125'\n",
-    "#date='20240126'"
+    "if date[0:2] == '20':\n",
+    "    base_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/'\n",
+    "else:\n",
+    "    base_dir = '/Users/user/0-python/JUICE_data/tmp/'\n",
+    "print(base_dir)"
    ]
   },
   {
@@ -85,35 +140,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_hf, err_hf = juice_hk.juice_readhk(date, 'LWYHK00032', base_dir=base_dir)\n",
+    "# HF: 32\n",
+    "if date[0:2] == '20':\n",
+    "    data_hf, err_hf = juice_hk.juice_readhk(date, 'LWYHK00032', base_dir=base_dir)\n",
+    "else:\n",
+    "    data_hf, err_hf = juice_hk.juice_readhk(date, 'LWY_HK_00032', base_dir=base_dir)\n",
     "if err_hf == 0: \n",
-    "    hk_hf = juice_hk.juice_gethk_hf(data_hf)\n",
-    "    print(\"read HF HK\")\n",
+    "    print(\"==> read HF-HK\")\n",
+    "    hk_hf = juice_hk.juice_gethk_hf(data_hf, 0)\n",
     "    err_hf2 = 1\n",
     "else:\n",
-    "    data_hf, err_hf2 = juice_hk.juice_readhk(date, 'LWYHK10033', base_dir=base_dir)\n",
-    "    if err_hf2 == 0: \n",
-    "        hk_hf = juice_hk.juice_gethk_hf2(data_hf)\n",
-    "        print(\"read HF HK2\")\n",
-    "        err_hf = 0\n",
-    "\n",
-    "data_dpu, err_dpu = juice_hk.juice_readhk(date, 'LWYHK00064', base_dir=base_dir)\n",
-    "if err_dpu == 0:\n",
-    "    hk_dpu = juice_hk.juice_gethk_dpu(data_dpu)\n",
-    "    print(\"read DPU HK\")\n",
-    "\n",
-    "data_lvps, err_lvps = juice_hk.juice_readhk(date, 'LWYHK00080', base_dir=base_dir)\n",
-    "if err_lvps == 0:\n",
-    "    hk_lvps = juice_hk.juice_gethk_lvps(data_lvps)\n",
-    "    print(\"read LVPS HK\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# (2) Plot HK values"
+    "    data_hf, err_hf = juice_hk.juice_readhk(date, 'LWYHK10033', base_dir=base_dir)\n",
+    "    if err_hf == 0:\n",
+    "        print(\"==> read HF-HK2\")\n",
+    "        hk_hf = juice_hk.juice_gethk_hf(data_hf, 1)\n",
+    "        err_hf2 = 0\n",
+    "    else: \n",
+    "        print(\"==> no HF-HK\")"
    ]
   },
   {
@@ -122,14 +165,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "title_label = 'JUICE/RPWI HF HK ' + date[0:4] + '-' + date[4:6] + '-' + date[6:8]\n",
-    "fig, (ax1, ax2, ax3, ax4, ax5) = plt.subplots(\n",
-    "    5, figsize=(10.0, 12.0), sharex=True)\n",
-    "\n",
-    "if err_hf == 0:\n",
+    "# DPU: 64\n",
+    "if date[0:2] == '20':\n",
+    "    data_dpu, err_dpu = juice_hk.juice_readhk(date, 'LWYHK00064', base_dir=base_dir)\n",
+    "else:\n",
+    "    data_dpu, err_dpu = juice_hk.juice_readhk(date, 'LWY_HK_00064', base_dir=base_dir)\n",
+    "if err_dpu == 0:\n",
+    "    print(\"==> read DPU-HK\")\n",
+    "    hk_dpu = juice_hk.juice_gethk_dpu(data_dpu, 0)\n",
+    "    err_dpu2 = 1\n",
+    "else: \n",
+    "    data_dpu, err_dpu = juice_hk.juice_readhk(date, 'LWYHK10064', base_dir=base_dir)\n",
+    "    if err_dpu == 0:\n",
+    "        print(\"read DPU HK2\")\n",
+    "        hk_dpu = juice_hk.juice_gethk_dpu(data_dpu, 1)\n",
+    "        err_dpu2 = 0\n",
+    "    else: \n",
+    "        print(\"==> no DPU-HK\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LVPS: 80\n",
+    "if date[0:2] == '20':\n",
+    "    data_lvps, err_lvps = juice_hk.juice_readhk(date, 'LWYHK00080', base_dir=base_dir)\n",
+    "else:\n",
+    "    data_lvps, err_lvps = juice_hk.juice_readhk(date, 'LWY_HK_00080', base_dir=base_dir)\n",
+    "if err_lvps == 0:\n",
+    "    print(\"==> read LVPS-HK\")\n",
+    "    hk_lvps = juice_hk.juice_gethk_lvps(data_lvps)\n",
+    "else: \n",
+    "    print(\"==> no LVPS HK\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if err_hf == 0 or err_hf2 == 0:\n",
     "    temp_lim = [-150.0, 100.0]\n",
     "    temp_rwi_ch1 = np.where((hk_hf.temp_rwi_ch1 < temp_lim[0]) |\n",
     "                          (hk_hf.temp_rwi_ch1 > temp_lim[1]), np.nan, hk_hf.temp_rwi_ch1)\n",
@@ -153,16 +232,132 @@
     "                          (hk_hf.temp_rwi_ch2_rev2 > temp_lim[1]), np.nan, hk_hf.temp_rwi_ch2_rev2)\n",
     "    temp_hf_fpga_rev2 = np.where((hk_hf.temp_hf_fpga_rev2 < temp_lim[0]) |\n",
     "                            (hk_hf.temp_hf_fpga_rev2 > temp_lim[1]), np.nan, hk_hf.temp_hf_fpga_rev2)\n",
+    "    \n",
+    "    # RAW\n",
+    "    temp_rwi_ch1_raw = np.where((hk_hf.temp_rwi_ch1_rev < temp_lim[0]) |\n",
+    "                          (hk_hf.temp_rwi_ch1_rev > temp_lim[1]), np.nan, hk_hf.temp_rwi_ch1_raw)\n",
+    "    temp_rwi_ch2_raw = np.where((hk_hf.temp_rwi_ch2_rev < temp_lim[0]) |\n",
+    "                          (hk_hf.temp_rwi_ch2_rev > temp_lim[1]), np.nan, hk_hf.temp_rwi_ch1_raw)\n",
+    "    temp_hf_fpga_raw = np.where((hk_hf.temp_hf_fpga_rev < temp_lim[0]) |\n",
+    "                            (hk_hf.temp_hf_fpga_rev > temp_lim[1]), np.nan, hk_hf.temp_hf_fpga_raw)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# (2) Plot HK values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "title_label = 'JUICE/RPWI HF HK ' + date[0:4] + '-' + date[4:6] + '-' + date[6:8]\n",
+    "fig, (ax1, ax2, ax3, ax4, ax5, ax6) = plt.subplots(\n",
+    "    6, figsize=(10.0, 12.0), sharex=True)\n",
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
-    "    ax1.plot(hk_hf.epoch, temp_hf_fpga, '.r', label='HF(FPGA)')\n",
-    "    ax1.plot(hk_hf.epoch, temp_hf_fpga_rev, '-k', label='HF(FPGA) rev')\n",
+    "    ax1.plot(temp_hf_fpga, '.c', markersize=3, linewidth=0.5, label='HF(FPGA)')\n",
+    "    ax1.plot(temp_hf_fpga_rev, '.b', markersize=3, linewidth=0.5, label='HF(FPGA) rev')\n",
+    "    # ax1.plot(temp_hf_fpga_rev2, '.y', label='HF(FPGA) rev2')\n",
     "if err_dpu == 0:\n",
-    "    ax1.plot(hk_dpu.epoch, hk_dpu.hf_temp, '-c', label='HF(PCB)')\n",
-    "    ax1.plot(hk_dpu.epoch, hk_dpu.lvps_temp, ':k', label='LVPS(PCB)')\n",
-    "    ax1.plot(hk_dpu.epoch, hk_dpu.lp_temp, ':r', label='LP(PCB)')\n",
-    "    ax1.plot(hk_dpu.epoch, hk_dpu.lf_temp, ':g', label='LF(PCB)')\n",
+    "    ax1.plot(hk_dpu.hf_temp, '.y', markersize=1, label='HF(PCB)')\n",
+    "    #ax1.plot(hk_dpu.lvps_temp, ':k', markersize=1, label='LVPS(PCB)')\n",
+    "    #ax1.plot(hk_dpu.lp_temp, ':r', markersize=1, label='LP(PCB)')\n",
+    "    #ax1.plot(hk_dpu.lf_temp, ':g', markersize=1, label='LF(PCB)')\n",
+    "ax1.set_ylabel('HF Temperature [degC]')\n",
+    "ax1.legend()\n",
+    "ax1.set_title(title_label)\n",
+    "\n",
+    "#-----------------------------------------------------------------\n",
+    "if err_hf == 0:\n",
+    "    ax2.plot(temp_rwi_ch1, '.c', markersize=3, linewidth=0.5, label='RWI CH1')\n",
+    "    ax2.plot(temp_rwi_ch2, '.y', markersize=3, linewidth=0.5, label='RWI CH2')\n",
+    "    ax2.plot(temp_rwi_ch1_rev, '.b', markersize=1, label='RWI CH1 rev')\n",
+    "    ax2.plot(temp_rwi_ch2_rev, '.r', markersize=1, label='RWI CH2 rev')\n",
+    "    # ax2.plot(temp_rwi_ch1_rev2, '-g', linewidth=0.5, label='RWI CH1 rev2')\n",
+    "    # ax2.plot(temp_rwi_ch2_rev2, '-b', linewidth=0.5, label='RWI CH2 rev2')\n",
+    "if err_dpu == 0:\n",
+    "    ax2.plot(hk_dpu.scm_temp, ':k', label='SCM')\n",
+    "ax2.set_ylabel('RWI Temperature [degC]')\n",
+    "ax2.legend()\n",
+    "\n",
+    "#-----------------------------------------------------------------\n",
+    "if err_lvps == 0:\n",
+    "    ax3.plot(hk_lvps.vol_hf_33, '.r', label='HF 3.3V (LVPS)')\n",
+    "    ax3.plot(hk_lvps.vol_hf_85, '.g', label='HF 8.5V (LVPS)')\n",
+    "    ax3.plot(hk_lvps.hf_on_off, '.k', label='HF ON/OFF (LVPS)')\n",
+    "ax3.set_ylabel('Voltage [V]')\n",
+    "ax3.legend()\n",
+    "\n",
+    "#-----------------------------------------------------------------\n",
+    "if err_lvps == 0:\n",
+    "    ax4.plot(hk_lvps.cur_hf_33, '.r', label='HF 3.3V (LVPS)')\n",
+    "    ax4.plot(hk_lvps.cur_hf_85*10, '.g', label='HF 8.5V (LVPS) [x10]')\n",
+    "\n",
+    "ax4.set_ylabel('Current [A]')\n",
+    "ax4.legend()\n",
+    "\n",
+    "#-----------------------------------------------------------------\n",
+    "if err_hf == 0:\n",
+    "    ax5.plot(hk_hf.heater_ena, '.r', label='Heater ENA')\n",
+    "    ax5.plot(hk_hf.pol + 0.2, '.g', label='Pol Master/Slave')\n",
+    "    if err_hf2 != 0:\n",
+    "        ax5.plot(hk_hf.calsig_ena+0.1, '.b', label='Cal signal ENA')\n",
+    "ax5.set_ylabel('HF status')\n",
+    "ax5.legend()\n",
+    "\n",
+    "#-----------------------------------------------------------------\n",
+    "if err_hf == 0:\n",
+    "    ax6.plot(hk_hf.epoch, '.k', label='HF');  \n",
+    "if err_dpu == 0:\n",
+    "    ax6.plot(hk_dpu.epoch, '.g', label='DPU');  \n",
+    "if err_lvps == 0:\n",
+    "    ax6.plot(hk_lvps.epoch, '.b', label='LVPS')\n",
+    "ax6.set_ylabel('Epoch')\n",
+    "ax6.legend()\n",
+    "\n",
+    "# range: X-axis\n",
+    "\"\"\"\n",
+    "i0=0;  i1=1000\n",
+    "xlim=[i0, i1];  print(xlim)\n",
+    "xlim=[i0, i1];  print(xlim)\n",
+    "ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim);  ax5.set_xlim(xlim);  ax6.set_xlim(xlim)\n",
+    "print(temp_hf_fpga_raw[i1], temp_hf_fpga_rev[i1], temp_hf_fpga_rev2[i1], temp_hf_fpga[i1], )\n",
+    "print(temp_rwi_ch1_raw[i1], temp_rwi_ch2_raw[i1], temp_rwi_ch1_rev[i1], temp_rwi_ch2_rev[i1], temp_rwi_ch1_rev2[i1], temp_rwi_ch2_rev2[i1], temp_rwi_ch1[i1], temp_rwi_ch2[i1],)\n",
+    "\"\"\"\n",
+    "\n",
+    "#-----------------------------------------------------------------\n",
+    "png_fname = work_dir+'RPWI_HF_HK_'+date+'.png'\n",
+    "fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_label = 'JUICE/RPWI HF HK ' + date[0:4] + '-' + date[4:6] + '-' + date[6:8]\n",
+    "fig, (ax1, ax2, ax3, ax4, ax5) = plt.subplots(\n",
+    "    5, figsize=(10.0, 12.0), sharex=True)\n",
+    "\n",
+    "#-----------------------------------------------------------------\n",
+    "if err_hf == 0:\n",
+    "    ax1.plot(hk_hf.epoch, temp_hf_fpga, '.c', markersize=3, linewidth=0.5, label='HF(FPGA)')\n",
+    "    ax1.plot(hk_hf.epoch, temp_hf_fpga_rev, '.b', markersize=3, linewidth=0.5, label='HF(FPGA) rev')\n",
+    "    #ax1.plot(hk_hf.epoch, temp_hf_fpga_rev2, '.y', linewidth=0.5, label='HF(FPGA) rev2')\n",
+    "if err_dpu == 0:\n",
+    "    ax1.plot(hk_dpu.epoch, hk_dpu.hf_temp, '.y', markersize=1, label='HF(PCB)')\n",
+    "    # ax1.plot(hk_dpu.epoch, hk_dpu.lvps_temp, '.k', markersize=1000, label='LVPS(PCB)')\n",
+    "    # ax1.plot(hk_dpu.epoch, hk_dpu.lp_temp, '.r', markersize=1000, label='LP(PCB)')\n",
+    "    # ax1.plot(hk_dpu.epoch, hk_dpu.lf_temp, '.g', markersize=1000, label='LF(PCB)')\n",
     "\n",
     "ax1.set_ylabel('HF Temperature [degC]')\n",
     "ax1.legend()\n",
@@ -170,11 +365,15 @@
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1, '.g', label='RWI CH1')\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2, '.b', label='RWI CH2')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1, '.c', markersize=3, linewidth=0.5, label='RWI CH1')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2, '.y', markersize=3, linewidth=0.5, label='RWI CH2')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev, '.b', markersize=1, label='RWI CH1 rev')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev, '.r', markersize=1, label='RWI CH2 rev')\n",
+    "    #ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev2, '-g', linewidth=0.5, label='RWI CH1 rev2')\n",
+    "    #ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev2, '-b', linewidth=0.5, label='RWI CH2 rev2')\n",
     "\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev, '-k', label='RWI CH1 rev')\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev, '-k', label='RWI CH2 rev')\n",
+    "if err_dpu == 0:\n",
+    "    ax2.plot(hk_dpu.epoch, hk_dpu.scm_temp, ':k', label='SCM')\n",
     "ax2.set_ylabel('RWI Temperature [degC]')\n",
     "ax2.legend()\n",
     "\n",
@@ -198,7 +397,6 @@
     "if err_hf == 0:\n",
     "    ax5.plot(hk_hf.epoch, hk_hf.heater_ena, '.r', label='Heater ENA')\n",
     "    ax5.plot(hk_hf.epoch, hk_hf.pol + 0.2, '.g', label='Pol Master/Slave')\n",
-    "\n",
     "    if err_hf2 != 0:\n",
     "        ax5.plot(hk_hf.epoch, hk_hf.calsig_ena+0.1, '.b', label='Cal signal ENA')\n",
     "\n",
@@ -206,13 +404,13 @@
     "ax5.legend()\n",
     "ax5.set_xlabel('UT')\n",
     "\n",
-    "\"\"\"\n",
-    "E_min = '2023-07-12 09:10:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "E_max = '2023-07-12 09:20:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "print(hk_hf.epoch)\n",
+    "E_min = '2024-01-25 11:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "E_max = '2024-01-25 12:10:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
     "xlim=[t_min, t_max]\n",
     "ax1.set_xlim(xlim)\n",
     "\"\"\"\n",
-    "\n",
+    "\"\"\"\n",
     "#-----------------------------------------------------------------\n",
     "png_fname = work_dir+'RPWI_HF_HK_'+date+'.png'\n",
     "# fig.savefig(png_fname)"
@@ -227,11 +425,12 @@
     "t = 10000\n",
     "print (hk_hf.temp_hf_fpga[t:t+10])\n",
     "print (hk_hf.temp_hf_fpga_rev[t:t+10])\n",
-    "\n",
+    "\"\"\"\n",
     "print(hk_dpu.lvps_temp[t:t+10])\n",
     "print(hk_dpu.hf_temp[t:t+10])\n",
     "print(hk_dpu.lp_temp[t:t+10])\n",
-    "print(hk_dpu.lf_temp[t:t+10])\n"
+    "print(hk_dpu.lf_temp[t:t+10])\n",
+    "\"\"\""
    ]
   }
  ],
@@ -251,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   },
   "orig_nbformat": 4
  },
