--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -74,19 +74,19 @@
     "# *** Mode set ***\n",
     "band_mode = 0                           # 0: sum    1: /Hz\n",
     "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 1                              # 0: linear   1:log  in frequency\n",
+    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "#\n",
     "time_mode = 1                           # 0: Epoch    1: data number\n",
     "\n",
     "# *** Parameter set ***\n",
-    "cal = 0                                 # 0: background     1: CAL\n",
+    "cal = 1                                 # 0: background     1: CAL\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Frenquency range set ***\n",
-    "f_mode_min = 5000                       # 80\n",
-    "f_mode_max = 15000                      # 2068 : as same as SID-4/20\n",
+    "f_mode_min = 800                        # 80\n",
+    "f_mode_max = 40000                      # 2068 : as same as SID-4/20\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
     "cf, p_max0, p_min0 = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
@@ -104,6 +104,7 @@
    "outputs": [],
    "source": [
     "# *** Ground - Ver.2 ***\n",
+    "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID03_20231024-0036.cdf']\n",
@@ -148,7 +149,6 @@
     "# COMP1->2, 2->1\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T040602-20000108T041954_V01___TMIDX_00000.bin.cdf',  # pc2_rpwi_hf_SID3_without_masking_2024_05_15_14_02_53\n",
     "                 ]\n",
-    "\"\"\"\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T042923-20000108T044315_V01___TMIDX_00000.bin.cdf',  # pc2_rpwi_hf_SID3_with_masking_2024_05_15_14_26_24\n",
     "                 ]\n",
     "# COMP2\n",
@@ -193,7 +193,14 @@
     "# COMP-1\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000108T074511-20000108T074711_V01___TMIDX_00000.bin.cdf',  # pc2_EGA-dryrun_RPW-SEQ-12j_2024_05_15_17_41_59\n",
     "                 ]\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "# 202406 -- dryrun check\n",
+    "# TEST\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202406_EM3/cdf/'\n",
+    "# COMP1->2, 2->1\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240614T161148-20240614T162539_V01___TMIDX_00000.bin.cdf',  \n",
+    "                                   ]\n"
    ]
   },
   {
@@ -1183,7 +1190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
