--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -1286,6 +1286,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ff9d27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sweep_num\n",
+    "# n_sweep1 = 0;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-1\n",
+    "# n_sweep1 = n_time0//4;  n_sweep2 = 3*n_time0//4;  n_sweep3 = n_time0-1\n",
+    "# Y-range\n",
+    "p_min = p_min0;   p_max = p_max0\n",
+    "# X-range\n",
+    "f_min = 80;   f_max = 45000\n",
+    "if f_mode == 0:\n",
+    "    f_min = f_mode_min;  f_max = f_mode_max;  \n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 10))\n",
+    "ax1 = fig.add_subplot(1, 1, 1)\n",
+    "\n",
+    "ax1.plot(freq_1d, EE_med, ':g', linewidth=.5, label='EE ave')\n",
+    "ax1.plot(freq_1d_msk, EE_msk, '-b', linewidth=1, label='EE mask')\n",
+    "ax1.plot(mask_list[:,0], mask_list[:,2]*15, '.r', label='mask')\n",
+    "ax1.set_yscale('log')\n",
+    "if f_mode == 1:\n",
+    "    ax1.set_xscale('log')\n",
+    "    \n",
+    "# Label\n",
+    "ax1.set_ylabel(power_str)\n",
+    "ax1.set_xlabel('Frequency [kHz]')\n",
+    "ax1.legend(loc='upper right', fontsize=8)\n",
+    "\n",
+    "# range: X-axis\n",
+    "xlim=[f_min,       f_max];        ax1.set_xlim(xlim); \n",
+    "\n",
+    "# range: Y-axis\n",
+    "\"\"\"\n",
+    "ylim=[p_min*10, p_max*10]\n",
+    "ylim=[1, 50]\n",
+    "ax1.set_ylim(ylim); ax2.set_ylim(ylim);  ax3.set_ylim(ylim); ax4.set_ylim(ylim); ax5.set_ylim(ylim); ax6.set_ylim(ylim);  \n",
+    "ax7.set_ylim(ylim); ax8.set_ylim(ylim);  ax9.set_ylim(ylim)\n",
+    "\"\"\"\n",
+    "\n",
+    "# Plot\n",
+    "fig.show\n",
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_w-msk.png'\n",
+    "    fig.savefig(png_fname)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f227ebbf",
    "metadata": {},
@@ -2400,7 +2450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
